# xopt

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  snprintf.c  xopt.c  xopt.h
.circleci/: Dockerfile.test  config.yml
test/: .gitignore  Makefile  autohelp-1.out  autohelp.c  macro-test.c  macro.c  nocondense-1.out  nocondense-sloppy-1.out  nocondense-sloppy-2.out  nocondense-sloppy-3.out  nocondense-sloppy.c  nocondense.c  optional-longarg-1.out  optional-longarg.c  required-1.out  required-test.c  required.c  simple-1.out  simple-test.c  simple.c  sloppyshorts-1.out  sloppyshorts.c  sloppyshorts.out  test-case.sh
